# cmake-wizardry

./: .gitignore  README.md
export-import-package/: README.md
export-import-package/exporting-project/: CMakeLists.txt
export-import-package/exporting-project/lib1/: CMakeLists.txt  README.md
export-import-package/exporting-project/lib1/sublib1/include/lib1/sublib1/: sublib1.h
export-import-package/exporting-project/lib1/sublib1/src/lib1/sublib1/: sublib1.cpp
export-import-package/exporting-project/lib1/sublib2/include/lib1/sublib2/: sublib2.h
export-import-package/exporting-project/lib1/sublib2/src/lib1/sublib2/: sublib2.cpp
export-import-package/exporting-project/lib2/: CMakeLists.txt  README.md
export-import-package/exporting-project/lib2/cmake/: lib2Config.cmake.in
export-import-package/exporting-project/lib2/sublib1/include/lib2/sublib1/: sublib1.h
export-import-package/exporting-project/lib2/sublib1/src/lib2/sublib1/: sublib1.cpp
export-import-package/exporting-project/lib2/sublib2/include/lib2/sublib2/: sublib2.h
export-import-package/exporting-project/lib2/sublib2/src/lib2/sublib2/: sublib2.cpp
export-import-package/exporting-project/lib3/: CMakeLists.txt  README.md
export-import-package/exporting-project/lib3/cmake/: lib3Config.cmake.in
export-import-package/exporting-project/lib3/sublib1/include/lib3/sublib1/: sublib1.h
export-import-package/exporting-project/lib3/sublib1/src/lib3/sublib1/: sublib1.cpp
export-import-package/exporting-project/lib3/sublib2/include/lib3/sublib2/: sublib2.h
export-import-package/exporting-project/lib3/sublib2/src/lib3/sublib2/: sublib2.cpp
export-import-package/exporting-project/lib4/: CMakeLists.txt  README.md
export-import-package/exporting-project/lib4/cmake/: lib4Config.cmake.in
export-import-package/exporting-project/lib4/include/lib4/: lib4.h
export-import-package/exporting-project/lib4/src/lib4/: lib4.cpp
export-import-package/importing-project/app1/: CMakeLists.txt  README.md  main.cpp
export-import-package/importing-project/app2/: CMakeLists.txt  README.md  main.cpp
export-import-package/importing-project/app3/: CMakeLists.txt  README.md  main.cpp
export-import-package/importing-project/app4/: CMakeLists.txt  README.md  main.cpp
handling-third-party-libs/: README.md
handling-third-party-libs/external-project-example/: CMakeLists.txt  main.cpp
handling-third-party-libs/fetch-content-example/: CMakeLists.txt  main.cpp
preprocessor-definitions/: README.md
preprocessor-definitions/example-1/: CMakeLists.txt  main.cpp
